[package]
name = "rusty_ad_lock"
version = "0.1.0"
edition = "2024"

[dependencies]
sha1 = { version = "0.10.6", optional = true }
sqlx = { version = "0.8.6", optional = true }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["rt"], optional = true }

[features]
sqlx-std-collection = ["sqlx"]

sqlx-dep = []
sqlx-all = ["sqlx-mysql", "sqlx-postgres", "sqlx-dep"]
sqlx-mysql = ["sqlx-dep", "sqlx/mysql", "sha1"]
sqlx-postgres = ["sqlx-dep", "sqlx/postgres"]
sqlx-sqlite = ["sqlx-dep", "sqlx/sqlite"]

runtime-async-std = ["sqlx?/runtime-async-std"]
runtime-async-std-native-tls = ["sqlx?/runtime-async-std-native-tls", "runtime-async-std"]
runtime-async-std-rustls = ["sqlx?/runtime-async-std-rustls", "runtime-async-std"]
runtime-actix = ["sqlx?/runtime-tokio"]
runtime-actix-native-tls = ["sqlx?/runtime-tokio-native-tls", "runtime-actix"]
runtime-actix-rustls = ["sqlx?/runtime-tokio-rustls", "runtime-actix"]
runtime-tokio = ["sqlx?/runtime-tokio", "tokio"]
runtime-tokio-native-tls = ["sqlx?/runtime-tokio-native-tls", "runtime-tokio"]
runtime-tokio-rustls = ["sqlx?/runtime-tokio-rustls", "runtime-tokio"]

[dev-dependencies]
pretty_assertions = { version = "1.4.1", features = ["unstable"] }
sqlx = { version = "0.8.6", features = ["macros", "migrate", "sqlite"] }
tokio = { version = "1.47.1", features = ["full"] }
